# Codility-Cpp11-Framework

./: .gitignore  CMakeLists.txt  Codility-Cpp11-Framework.sln  README.md
Codility-Cpp11-Framework/: Codility-Cpp11-Framework.vcxproj  Codility-Cpp11-Framework.vcxproj.filters  TestHelper.cpp  TestHelper.h  main.cpp
src/: TestHelper.cpp  TestHelper.h  main.cpp
src/Tasks/: TaskBase.h  TaskExample.cpp  TaskExample.h  TaskTemplate.cpp  TaskTemplate.h
